--- a/css/main.css
+++ b/css/main.css
@@ -11,10 +11,37 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
-  background-color: #e2e2e2;
   font-family: sans-serif;
+  background-color: #e2e2e2;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
+}
+
+body {
+  max-height: 75vh;
+  overflow: hidden;
+}
+
+section {
+  line-height: 1.3;
+  font-size: 100%;
+}
+
+h1 {
+  line-height: 1.5;
+}
+
+img {
+  width: 100%;
+}
+
+a {
+  background-color: #555;
+  text-decoration: none;
+  color: #e2e2e2;
+  padding: 0.5em 0.75em;
+  border-radius: 4px;
+  line-height: 1.4;
 }
