--- a/css/main.css
+++ b/css/main.css
@@ -23,11 +23,13 @@ body {
   max-height: 75vh;
   overflow: hidden;
   margin: 1rem;
+  max-width: 50%;
 }
 
 section {
   line-height: 1.3;
   font-size: 100%;
+  text-align: left;
 }
 
 h1 {
@@ -37,8 +39,10 @@ h1 {
 strong {
   display: block;
 }
+
 img {
   width: 100%;
+  text-align: center;
   padding-top: 1rem;
 }
 
@@ -49,4 +53,12 @@ a {
   padding: 0.5em 0.75em;
   border-radius: 4px;
   line-height: 1.4;
+}
+
+div {
+  display: inline-block;
+}
+
+@media only screen and (min-width: 60em) {
+
 }
