--- a/css/main.css
+++ b/css/main.css
@@ -13,22 +13,22 @@ html {
   text-size-adjust: 100%;
   font-family: sans-serif;
   background-color: #e2e2e2;
+  margin: 0;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
-}
-
-body {
-  max-height: 75vh;
-  overflow: hidden;
-  margin: 1rem;
-  max-width: 50%;
+  font-family: sans-serif;
 }
 
 section {
-  line-height: 1.3;
-  font-size: 100%;
+  padding: 0;
+  margin: 0;
+}
+
+div {
+  display: inline-block;
+  text-align: center;
   text-align: left;
 }
 
@@ -36,29 +36,41 @@ h1 {
   line-height: 1.5;
 }
 
+a {
+  text-decoration: none;
+  color: #e2e2e2;
+  line-height: 1.3;
+  background-color: #555;
+  padding: 0.5em 0.75em;
+  border-radius: 4px;
+  margin: 2em 0;
+}
+
 strong {
   display: block;
+  line-height: 1.4;
 }
 
 img {
   width: 100%;
-  text-align: center;
-  padding-top: 1rem;
+  vertical-align: middle;
 }
 
-a {
-  background-color: #555;
-  text-decoration: none;
-  color: #e2e2e2;
-  padding: 0.5em 0.75em;
-  border-radius: 4px;
-  line-height: 1.4;
-}
+@media only screen and (min-width: 25em) {
 
-div {
-  display: inline-block;
+
+
+@media only screen and (min-width: 38em) {
+
+
 }
 
 @media only screen and (min-width: 60em) {
+
+
+}
+
+@media only screen and (min-width: 90em) {
+
 
 }
