--- a/css/main.css
+++ b/css/main.css
@@ -11,66 +11,104 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
-  font-family: sans-serif;
-  background-color: #e2e2e2;
-  margin: 0;
+
+  font: normal 100%/1.3 sans-serif;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
-  font-family: sans-serif;
 }
 
-section {
-  padding: 0;
+body {
   margin: 0;
 }
 
-div {
-  display: inline-block;
-  text-align: center;
-  text-align: left;
+.content {
+  padding: 0 1rem 1rem;
 }
 
-h1 {
-  line-height: 1.5;
+section {
+  padding: 1rem 0;
+
+  background-color: #e2e2e2;
+}
+
+h1,
+p {
+  margin: 0 0 1.3rem;
 }
 
 a {
   text-decoration: none;
-  color: #e2e2e2;
-  line-height: 1.3;
+  color: white;
   background-color: #555;
-  padding: 0.5em 0.75em;
+  padding: .5em .75em;
   border-radius: 4px;
-  margin: 2em 0;
+  display: inline-block;
 }
 
-strong {
-  display: block;
-  line-height: 1.4;
+a:hover {
+  background-color: #000;
 }
 
-img {
+.img-flex {
   width: 100%;
-  vertical-align: middle;
+  display: block;
 }
-
-@media only screen and (min-width: 25em) {
-
-
 
 @media only screen and (min-width: 38em) {
 
+  html {
+    font-size: 110%;
+    line-height: 1.4;
+  }
+
+  h1,
+  p {
+    margin-bottom: 1.4rem;
+  }
+
+  section {
+    padding: 2rem 0;
+    text-align: center;
+  }
+
+  .content {
+    vertical-align: middle;
+    display: inline-block;
+    text-align: left;
+    width: 48%;
+    max-width: 25em;
+    padding-bottom: 0;
+  }
+
+  .content-img {
+    display: inline-block;
+    vertical-align: middle;
+    width: 50%;
+    max-width: 25em;
+  }
 
 }
 
 @media only screen and (min-width: 60em) {
 
+  html {
+    font-size: 120%;
+    line-height: 1.5;
+  }
+
+  h1,
+  p {
+    margin-bottom: 1.5rem;
+  }
 
 }
 
 @media only screen and (min-width: 90em) {
 
+  html {
+    font-size: 130%;
+  }
 
 }
